@@ -43,6 +43,7 @@ depth: 1
  * Refactor accessibility checker userbar item (Albina Starykova)
  * Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
  * Provisional Django 5.0 compatibility fixes (Sage Abdullah)
+ * Add unit tests for `CollapseAll` component (Albina Starykova)
 
 ## Upgrade considerations
 
