@@ -24,6 +24,7 @@ Changelog
  * Maintenance: Refactor accessibility checker userbar item (Albina Starykova)
  * Maintenance: Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
  * Maintenance: Provisional Django 5.0 compatibility fixes (Sage Abdullah)
+ * Maintenance: Add unit tests for `CollapseAll` component (Albina Starykova)
 
 
 4.2.1 (xx.xx.xxxx) - IN DEVELOPMENT
